# data-science-gist

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.MD  docker-compose.yaml  pyproject.toml
patient_no_show/: data_adapter.py  prepare.py  schema.py  train.py
project/: data_adapter.py  load.py  main.py  prepare.py  schema.py  train.py
scripts/: benchmark_model.py
tests/integration/patient_no_show/: test_data_adapter.py
tests/integration/project/: test_data_adapter.py
