[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "dev-setup"
version = "0.1.0"
description = "Showcasing code server dev setup."
authors = ["Tobias Rippel <tobias.rippel@gmx.de>"]

[tool.poetry.dependencies]
python = "~3.9.10"
pytest = "6.2.5"
pandas = "^1.3.0"
pandera = "^0.7.2"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
mypy = "0.812"
pre-commit = "2.16.0"
pydocstyle = "6.1.1"
black = "21.12b0"
isort = "5.10.1"
notebook = "^6.4.6"
pyarrow = "^3.0.0"
rope = "^0.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
