[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "dev-setup"
version = "0.1.0"
description = "Showcasing code server dev setup."
authors = ["Tobias Rippel <tobias.rippel@gmx.de>"]

[tool.poetry.dependencies]
python = "~3.10.4"
pandas = "^1.4.2"
pandera = "^0.11.0"
pydantic = "^1.9.1"
xgboost = "^1.6.1"
scikit-learn = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.19.0"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.940"
pydocstyle = "6.1.1"
rope = "^0.22.0"
pytest = "7.1.2"
notebook = "^6.4.11"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
