[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "dev-setup"
version = "0.1.0"
description = "Showcasing code server dev setup."
authors = ["Tobias Rippel <tobias.rippel@gmx.de>"]

[tool.poetry.dependencies]
python = "~3.10.4"
pandas = "^1.4.2"
pandera = "^0.11.0"
pydantic = "^1.9.1"
xgboost = "^1.6.1"
scikit-learn = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.0"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "5.12.0"
mypy = "^1.1.1"
pydocstyle = "^6.3.0"
rope = "^0.22.0"
notebook = "^6.4.11"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
